# rustfullstack

./: Cargo.toml  index.html
src/: lib.rs  router.rs
src/components/nav/: nav.rs
src/pages/: mod.rs
src/pages/about/: about.rs
src/pages/contact/: contact.rs
src/pages/home/: home.rs
src/pages/not_found/: mod.rs  not_found.rs
